[project]
name = "cli-cag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cag",
    "python-magic>=0.4.27",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
    "typer>=0.16.0",
]

[tool.uv.sources]
cag = { git = "https://github.com/panalexeu/cag.git" }
