[project]
name = "cli-cag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cag @ git+https://github.com/panalexeu/cag.git",
    "python-magic>=0.4.27",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
    "typer>=0.16.0",
]

[project.scripts]
cli-cag = "cli.app:app"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
